Format readmore&less button correctly, fix overlapping JS function, #113

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,9 +102,10 @@ p {
 
 .button {
   text-align: center;
+  font-family: 'Glacial indifference';
 }
 
-.button a {
+.button a, #myBtn {
   display: inline;
   justify-content: center;
   border-color: yellow;
@@ -114,6 +115,15 @@ p {
   color: white;
   padding: 0.5em 1em;
   transition: 0.5s; /*Trasition Added*/
+}
+
+#myBtn {
+  background-color: salmon;
+  border-color: white;
+}
+
+#myBtn:hover {
+  background-color: rgb(193, 66, 52);
 }
 
 .button a:hover {
@@ -1159,7 +1169,7 @@ form input[type="email"] {
   border: 0.15em solid black;
   border-radius: 0.7em;
   font-size: 14px;
-  font-family: 'glacial indifference';
+  font-family: 'Glacial indifference';
   text-align: center;
 }
 
@@ -1186,6 +1196,7 @@ button[type="submit"] {
   cursor: pointer;
   transition: 0.5s;
   margin: 1em;
+
 }
 
 button[type="submit"]:hover {
@@ -1241,6 +1252,6 @@ form input {
     width: 6em;
     height: 2em;
     font-size: 2.2vh;
-    font-family: 'glacial indifference';
+
 }
   }
